<resources>
    <string name="app_name">commerce-e</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="login_fragment_label">Login</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="home_fragment_label">Home</string>
    <string name="product_fragment_label">Products</string>
    <string name="category_fragment_label">Category</string>
    <string name="register_user_fragment_label">Register User</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="camera">Choose From Camera</string>
    <string name="storage">Choose From Storage</string>
    <string name="gallery">Choose From Gallery</string>
    <string name="phone">(xxx)-xxx-xxx</string>
    <string name="searchBy">Search By:</string>
    <string name="byProduct">By product</string>
    <string name="searchProduct">Search Products</string>
    <string name="searchCategory">Search Categories</string>
    <string name="notificationLabel">Notifications</string>
    <string name="editUser">Edit</string>
    <string name="viewUserLabel">Profile</string>
    <string name="forgotPass">Forgot password</string>
    <string name="swChangePass">Check to change password</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="cart">Cart</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="imageUser">User Image here</string>
    <string name="enterName">Enter name</string>
    <string name="enterLastname">Enter Lastname</string>
    <string name="enterEmail">Enter email</string>
    <string name="enterPass1">Enter password</string>
    <string name="enterPass2">Confirm password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_testing">testing</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="category">Category</string>
    <string name="product">Product</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="enter_category_name">Enter category name</string>
    <string name="save_update">save/update</string>
    <string name="enter_product_name">Enter product name</string>
    <string-array name="roles">
        <item>Select role</item>
        <item>User</item>
        <item>Admin</item>
    </string-array>
</resources>