<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_baseline_home_24"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_category"
                android:icon="@drawable/ic_baseline_category_24"
                android:title="@string/category"/>
        <item
                android:id="@+id/nav_product"
                android:icon="@drawable/ic_baseline_shopping_basket_24"
                android:title="@string/product"/>
    </group>
    <item android:title="@string/profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/nav_help"
                        android:icon="@drawable/ic_baseline_help_24"
                        android:title="@string/help"/>
                <item
                        android:id="@+id/nav_profile"
                        android:icon="@drawable/ic_baseline_account_circle_24"
                        android:title="@string/profile"/>
                <item
                        android:id="@+id/nav_logout"
                        android:icon="@drawable/ic_baseline_exit_to_app_24"
                        android:title="@string/log_out"/>
            </group>
        </menu>
    </item>
</menu>