<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterUserFragment" android:background="#424555">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
                android:layout_width="0dp"
                android:layout_height="199dp" tools:srcCompat="@tools:sample/avatars"
                android:id="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="28dp"
                android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
                app:layout_constraintHorizontal_bias="0.476" android:clickable="true" android:background="#FFFFFF"
                android:contentDescription="@string/imageUser"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/userNametxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:hint="@string/enterName"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:textColor="#FFFFFF"
                android:minHeight="48dp" app:layout_constraintTop_toBottomOf="@+id/progressBar2"
                android:layout_marginTop="16dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/lastNametxt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:hint="@string/enterLastname"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:textColor="#FFFFFF"
                android:minHeight="48dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/userNametxt" android:layout_marginTop="16dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/emailtxt"
                app:layout_constraintTop_toBottomOf="@+id/lastNametxt" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" android:layout_marginTop="16dp" android:minHeight="48dp"
                android:hint="@string/enterEmail"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passConfirm1"
                app:layout_constraintTop_toBottomOf="@+id/emailtxt"
                android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" android:minHeight="48dp" android:hint="@string/enterPass1"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/passConfirm2"
                app:layout_constraintTop_toBottomOf="@+id/passConfirm1"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                android:hint="@string/enterPass2" android:minHeight="48dp"/>
        <Button
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="55dp" android:id="@+id/btnRegisterUser"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:textColor="#FFFFFF"
                app:layout_constraintTop_toBottomOf="@+id/spnRoles" android:layout_marginTop="16dp"/>
        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:id="@+id/progressBar2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>
        <Spinner
                android:layout_width="376dp"
                android:layout_height="48dp" android:id="@+id/spnRoles"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/passConfirm2"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:entries="@array/roles"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>