<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/FirstFragment">

    <fragment
            android:id="@+id/FirstFragment"
            android:name="com.aip.commerce_e.FirstFragment"
            android:label="@string/first_fragment_label"
            tools:layout="@layout/fragment_first">

        <action
                android:id="@+id/action_FirstFragment_to_SecondFragment"
                app:destination="@id/SecondFragment"/>
    </fragment>
    <fragment
            android:id="@+id/SecondFragment"
            android:name="com.aip.commerce_e.SecondFragment"
            android:label="@string/second_fragment_label"
            tools:layout="@layout/fragment_second">

        <action
                android:id="@+id/action_SecondFragment_to_FirstFragment"
                app:destination="@id/FirstFragment"/>
    </fragment>
    <fragment android:id="@+id/registerUserFragment" android:name="com.aip.commerce_e.RegisterUserFragment"
              android:label="@string/register_user_fragment_label" tools:layout="@layout/fragment_register_user"/>
    <fragment android:id="@+id/categoryFragment"
              android:name="com.aip.commerce_e.drawerFragments.category.CategoryFragment"
              android:label="fragment_category" tools:layout="@layout/fragment_category"/>
    <fragment android:id="@+id/productFragment"
              android:name="com.aip.commerce_e.drawerFragments.product.ProductFragment" android:label="fragment_product"
              tools:layout="@layout/fragment_product"/>
    <fragment android:id="@+id/homeFragment3" android:name="com.aip.commerce_e.drawerFragments.home.HomeFragment"
              android:label="fragment_home" tools:layout="@layout/fragment_home"/>
</navigation>