<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".drawerFragments.category.actions.CreateCategoryFragment" android:background="#424555">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="199dp" tools:srcCompat="@tools:sample/avatars"
                android:id="@+id/category_image_view"
                android:layout_marginTop="28dp"
                android:layout_marginStart="24dp" android:layout_marginEnd="24dp"
                android:clickable="true" android:background="#FFFFFF"
                android:contentDescription="@string/imageUser"/>
        <!--<ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:id="@+id/category_progress_bar"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>-->
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_marginVertical="20dp"
                android:id="@+id/category_name_txt"
                android:hint="@string/enter_category_name"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:textColor="#FFFFFF"
                android:minHeight="48dp"
                android:layout_marginTop="16dp"/>
        <Button
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:id="@+id/btn_register_category"
                android:textColor="#FFFFFF"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>